PharmaDemo/src/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Code__c</fullName>
        <label>POrg</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <inlineHelpText>City Code such as AR</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DelF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <externalId>true</externalId>
        <label>Search Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SuSet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Co_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>